[package]
name = "spek-cli"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
symphonia = { version = "0.5", features = ["all"] }
rustfft = "6.1"
image = "0.24"
viuer = "0.6"
crossterm = "0.27"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
imageproc = "0.23"
ab_glyph = "0.2"
anyhow = "1.0"
rusttype = "0.9.3"
indicatif = "0.17"
rayon = "1.8"
owo-colors = "4.0"

